test/mpi/errors/f08/Makefile.am
##
## Copyright 2026 Argonne National Laboratory
## SPDX-License-Identifier: Apache-2.0
##

include $(top_srcdir)/Makefile_f08.mtest

EXTRA_DIST = testlist

SUBDIRS = @iodir@
DIST_SUBDIRS = io
